# QtOpenGL_ColorMap

./: .gitignore  CMakeLists.txt  QtOpenGL_ColorMap.pro  README.md  colorMap.qrc  colormap.cpp  colormapwidget.h  colorscale.h  drawdata.cpp  drawdata.h  main.cpp  mainwindow.cpp  mainwindow.h
QtOpenGL_ColorMap/: colormap.h  colormapwidget.cpp  colorscale.cpp  colorscale.h
base/: colorscale.h  drawdata.cpp  drawdata.h  mainwindow.cpp  windowcenterwidget.cpp  windowcenterwidget.h
colormap/: colormap.cpp  colormap.h  colormapcolorscale.h  colormapdata.cpp  colormapdata.h  colormapwidget.cpp  colormapwidget.h
doc/: ColorMap 绘图设计.md  generateDrawData.md
example/: example_one.h
liberaries/freetype/share/brotli/: vcpkg_abi_info.txt
liberaries/freetype/share/bzip2/: vcpkg.spdx.json  vcpkg_abi_info.txt
liberaries/freetype/share/freetype/: vcpkg.spdx.json  vcpkg_abi_info.txt
liberaries/freetype/share/libpng/: vcpkg_abi_info.txt
liberaries/freetype/share/vcpkg-cmake/: vcpkg.spdx.json
liberaries/freetype/share/vcpkg-cmake-config/: vcpkg.spdx.json
liberaries/freetype/share/zlib/: vcpkg_abi_info.txt
liberaries/share/brotli/: vcpkg.spdx.json
liberaries/share/glm/: vcpkg.spdx.json  vcpkg_abi_info.txt
liberaries/share/libpng/: vcpkg.spdx.json
liberaries/share/zlib/: vcpkg.spdx.json
resources/: colorMap.qrc
resources/shaders/fragmentshader/: gl_axes_line.frag  gl_draw_font.frag  gl_image.frag
resources/shaders/vertexShader/: gl_axes_line.vert  gl_draw_font.vert  gl_image.vert  gl_image_ualpha.vert
src/base/: character.cpp  character.h  colorscale.h  coordinatesystem.h  drawdata.cpp  drawdata.h  glfont.cpp  glfont.h  mainwindow.cpp  mainwindow.h  windowcenterwidget.cpp  windowcenterwidget.h
src/colormap/: RenderThread.cpp  RenderThread.h  colormap.cpp  colormap.h  colormapcolorscale.cpp  colormapcolorscale.h  colormapcoordinate.cpp  colormapcoordinate.h  colormapdata.cpp  colormapdata.h  colormapwidget.cpp  colormapwidget.h
